Fix messed up alignment

--- a/files/style.css
+++ b/files/style.css
@@ -1313,7 +1313,8 @@ a:hover {
 }
 
 .description {
-  margin-top: 2rem;
+  margin-top: 2.5rem;
+  margin-left: -0.3rem;
 }
 
 .description-1 {
@@ -1322,22 +1323,22 @@ a:hover {
 
 .description-2 {
   margin-top: 2.5rem;
-  margin-left: -1.1rem;
+  margin-left: -1.4rem;
 }
 
 .description-3 {
   margin-top: 2.5rem;
-  margin-left: 15.8rem;
+  margin-left: 15.4rem;
 }
 
 .description-4 {
   margin-top: 2.5rem;
-  margin-left: 7.25rem;
+  margin-left: 7.7rem;
 }
 
 .description-5 {
   margin-top: 2.5rem;
-  margin-left: 20rem;
+  margin-left: 21.5rem;
 }
 
 .description-6 {
